idk but I did in fact do some things

--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -52,7 +52,7 @@
 @define-color	crust-rgb  rgb(17, 17, 27);
 
 * {
-  font-family: 'JetBrainsMono Nerd Font', monospace;
+  font-family: 'Inter Nerd Font Propo', monospace;
   font-size: 18px;
 }
 
