--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "mocha.css";
 
 * {
-  font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
+  font-family: "Inter Nerd Font Propo", Roboto, Helvetica, Arial, sans-serif;
   font-size: 18px;
 }
 
@@ -24,11 +24,6 @@ button {
 button:hover {
   background: inherit;
   box-shadow: inset 0 -3px #ffffff;
-}
-
-/* you can set a style on hover for any module like this */
-#pulseaudio:hover {
-  background-color: @surface2;
 }
 
 #workspaces button {
@@ -61,7 +56,9 @@ button:hover {
 #memory,
 #temperature,
 #network,
-#pulseaudio {
+#pulseaudio,
+#bluetooth,
+#custom {
   padding: 0 10px;
 }
 
